Added and make simpler modules

--- a/views/auth/register.ejs
+++ b/views/auth/register.ejs
@@ -19,7 +19,7 @@
         <form action="/register" method="POST" class="auth-form">
             <div class="input-group">
                 <label for="username">Username</label>
-                <input type="text" id="udername" name="username" required placeholder="Enter your username">
+                <input type="text" id="username" name="username" required placeholder="Enter your username">
             </div>
 
             <div class="input-group">
