--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -31,6 +31,7 @@
                 <% } else { %>
                     <a href="/login" class="auth-link">Login</a>
                     <a href="/register" class="auth-link signup">Sign Up</a>
+                    <a href="/admin/login" class="auth-link admin-link">Admin Login</a>
                 <% } %>
             </nav>
         </div>
@@ -56,4 +57,3 @@
         });
     });
 </script>
-
