The loading animation

--- a/public/css/admin-style.css
+++ b/public/css/admin-style.css
@@ -336,26 +336,40 @@ body {
 
 /* loading animation */
 
-.btn-login.loading {
-  position: relative;
-  color: transparent;
+.spinner {
+  display: inline-block;
+  width: 1em;
+  height: 1em;
+  border: 2px solid rgba(255, 255, 255, 0.3);
+  border-radius: 50%;
+  border-top-color: #fff;
+  animation: spin 1s ease-in-out infinite;
+  -webkit-animation: spin 1s ease-in-out infinite;
+  margin-left: -6em;
+  vertical-align: middle;
 }
 
-.btn-login.loading::after {
-  content: '';
-  position: absolute;
-  width: 20px;
-  height: 20px;
-  top: 50%;
-  left: 50%;
-  margin: -10px 0 0 -10px;
-  border: 2px solid transparent;
-  border-top: 2px solid white;
-  border-radius: 50%;
-  animation: spin 1s linear infinite;
+.spinner.hide {
+  display: none;
 }
 
 @keyframes spin {
-  0% {transform: rotate(0deg);}
-  100% {transform: rotate(360deg);}
+  to {
+    transform: rotate(360deg);
+  }
+}
+
+@-webkit-keyframes spin {
+  to {
+    -webkit-transform: rotate(360deg);
+  }
+}
+
+/* Button loading state */
+.btn-login.loading .btn-text {
+  visibility: hidden;
+}
+
+.btn-login.loading .spinner {
+  display: inline-block;
 }
